// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<PlanInformationPanel /> ACTIVE Plan 1`] = `
<PlanInformationPanel
  currentPort="Standby"
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 2,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 12,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  runType={4}
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "ACTIVE",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    className="width"
  >
    <Row
      noGutters={false}
    >
      <div
        className="row"
      >
        <Col
          className="info-row col-sm-4"
        >
          <div
            className="info-row col-sm-4 col"
          >
            <div
              className="col text-center br"
              id="plan"
            >
              <span
                className="titles"
              >
                Plan Running: 
              </span>
              <span
                className="values"
              >
                __default__
                 
              </span>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info info-row col-sm-4"
        >
          <div
            className="text-center center-info info-row col-sm-4 col"
          >
            <div
              className="row text-center"
              id="curr-port-line"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                Measuring Port:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                6: Ch. 6
                 
              </div>
            </div>
            <div
              className="row text-center"
              id="curr-port-time"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                 
                Remaining Time:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                30
                 seconds
              </div>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info-2 info-row"
          id="next-port"
          sm={4}
        >
          <div
            className="text-center center-info-2 info-row col-sm-4"
            id="next-port"
          >
            <span
              className="titles"
            >
              Next Port: 
            </span>
            <span
              className="values"
            >
               
              Clean Bank 1
               
            </span>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</PlanInformationPanel>
`;

exports[`<PlanInformationPanel /> Last Step = 0 1`] = `
<PlanInformationPanel
  currentPort="Standby"
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 2,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 0,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  runType={4}
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "ACTIVE",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    className="width"
  >
    <Row
      noGutters={false}
    >
      <div
        className="row"
      >
        <Col
          className="info-row col-sm-4"
        >
          <div
            className="info-row col-sm-4 col"
          >
            <div
              className="col text-center br"
              id="plan"
            >
              <span
                className="titles"
              >
                Plan Running: 
              </span>
              <span
                className="values"
              >
                __default__
                 
              </span>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info info-row col-sm-4"
        >
          <div
            className="text-center center-info info-row col-sm-4 col"
          >
            <div
              className="row text-center"
              id="curr-port-line"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                Measuring Port:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                6: Ch. 6
                 
              </div>
            </div>
            <div
              className="row text-center"
              id="curr-port-time"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                 
                Remaining Time:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                30
                 seconds
              </div>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info-2 info-row"
          id="next-port"
          sm={4}
        >
          <div
            className="text-center center-info-2 info-row col-sm-4"
            id="next-port"
          >
            <span
              className="titles"
            >
              Next Port: 
            </span>
            <span
              className="values"
            >
               
              Clean Bank 1
               
            </span>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</PlanInformationPanel>
`;

exports[`<PlanInformationPanel /> No Plan Loaded 1`] = `
<PlanInformationPanel
  currentPort="Standby"
  plan={
    Object {
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "",
            "2": "",
            "3": "",
            "4": "",
            "5": "",
            "6": "",
            "7": "",
            "8": "",
          },
          "name": "",
        },
        "2": Object {
          "channels": Object {
            "1": "",
            "2": "",
            "3": "",
            "4": "",
            "5": "",
            "6": "",
            "7": "",
            "8": "",
          },
          "name": "",
        },
        "3": Object {
          "channels": Object {
            "1": "",
            "2": "",
            "3": "",
            "4": "",
            "5": "",
            "6": "",
            "7": "",
            "8": "",
          },
          "name": "",
        },
        "4": Object {
          "channels": Object {
            "1": "",
            "2": "",
            "3": "",
            "4": "",
            "5": "",
            "6": "",
            "7": "",
            "8": "",
          },
          "name": "",
        },
      },
      "current_step": 1,
      "focus": Object {
        "column": 0,
        "row": 0,
      },
      "last_step": 0,
      "max_steps": 32,
      "num_plan_files": 0,
      "panel_to_show": 0,
      "plan_filename": "",
      "plan_files": Object {},
      "steps": Object {},
    }
  }
  runType={0}
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "ACTIVE",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    className="width"
  >
    <Row
      noGutters={false}
    >
      <div
        className="row"
      >
        <Col
          className="info-row col-sm-6"
        >
          <div
            className="info-row col-sm-6 col"
          >
            <div
              className="col text-center br"
              id="plan"
            >
              <span
                className="titles"
              >
                Plan Loaded: 
              </span>
              <span
                className="values"
              >
                No Plan Loaded
                 
              </span>
            </div>
          </div>
        </Col>
        <Col
          className="ext-center center-info info-row col-sm-6"
        >
          <div
            className="ext-center center-info info-row col-sm-6 col"
          >
            <div
              className="row text-center"
              id="curr-port-line"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                Measuring Port:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                Standby
                 
              </div>
            </div>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</PlanInformationPanel>
`;

exports[`<PlanInformationPanel /> Snapshot 1`] = `
<PlanInformationPanel
  currentPort="Standby"
  plan={
    Object {
      "available_ports": Object {
        "1": 170,
        "2": 0,
        "3": 170,
        "4": 170,
      },
      "bank_names": Object {
        "1": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 1",
        },
        "2": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 2",
        },
        "3": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 3",
        },
        "4": Object {
          "channels": Object {
            "1": "Ch. 1",
            "2": "Ch. 2",
            "3": "Ch. 3",
            "4": "Ch. 4",
            "5": "Ch. 5",
            "6": "Ch. 6",
            "7": "Ch. 7",
            "8": "Ch. 8",
          },
          "name": "Bank 4",
        },
      },
      "current_step": 11,
      "focus": Object {
        "column": 1,
        "row": 12,
      },
      "last_step": 12,
      "looping": false,
      "max_steps": 32,
      "num_plan_files": 2,
      "panel_to_show": 0,
      "plan_filename": "__default__",
      "plan_files": Object {
        "1": "__default__",
        "2": "tr",
      },
      "steps": Object {
        "1": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 2,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "10": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 8,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "11": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 128,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "12": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 1,
        },
        "2": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "3": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 1,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "4": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "5": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 32,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "6": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 8,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "7": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 128,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 0,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "8": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 2,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
        "9": Object {
          "banks": Object {
            "1": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "3": Object {
              "chan_mask": 0,
              "clean": 0,
            },
            "4": Object {
              "chan_mask": 32,
              "clean": 0,
            },
          },
          "duration": 20,
          "reference": 0,
        },
      },
    }
  }
  runType={4}
  timer={30}
  uistatus={
    Object {
      "bank": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "channel": Object {
        "1": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "3": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
        "4": Object {
          "1": "DISABLED",
          "2": "AVAILABLE",
          "3": "DISABLED",
          "4": "AVAILABLE",
          "5": "DISABLED",
          "6": "AVAILABLE",
          "7": "DISABLED",
          "8": "AVAILABLE",
        },
      },
      "clean": Object {
        "1": "READY",
        "3": "READY",
        "4": "READY",
      },
      "edit": "READY",
      "identify": "READY",
      "loop_plan": "READY",
      "plan": "READY",
      "plan_loop": "READY",
      "plan_run": "READY",
      "reference": "READY",
      "run": "READY",
      "run_plan": "READY",
      "standby": "ACTIVE",
    }
  }
>
  <div
    className="width"
  >
    <Row
      noGutters={false}
    >
      <div
        className="row"
      >
        <Col
          className="info-row col-sm-4"
        >
          <div
            className="info-row col-sm-4 col"
          >
            <div
              className="col text-center br"
              id="plan"
            >
              <span
                className="titles"
              >
                Plan Running: 
              </span>
              <span
                className="values"
              >
                __default__
                 
              </span>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info info-row col-sm-4"
        >
          <div
            className="text-center center-info info-row col-sm-4 col"
          >
            <div
              className="row text-center"
              id="curr-port-line"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                Measuring Port:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                32: Ch. 8
                 
              </div>
            </div>
            <div
              className="row text-center"
              id="curr-port-time"
            >
              <div
                className="titles text-left"
                id="curr-port"
              >
                 
                Remaining Time:
                 
              </div>
              <div
                className="values text-left"
                id="curr-port"
              >
                30
                 seconds
              </div>
            </div>
          </div>
        </Col>
        <Col
          className="text-center center-info-2 info-row"
          id="next-port"
          sm={4}
        >
          <div
            className="text-center center-info-2 info-row col-sm-4"
            id="next-port"
          >
            <span
              className="titles"
            >
              Next Port: 
            </span>
            <span
              className="values"
            >
               
              Reference
               
            </span>
          </div>
        </Col>
      </div>
    </Row>
  </div>
</PlanInformationPanel>
`;
